kubernetes/nextcloud-fpm/components/cnpg/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-nextcloud-app
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: nextcloud
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud-fpm
          podSelector:
            matchLabels:
              db: nextcloud-pg
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-nextcloud-app-egress
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchLabels:
      db: nextcloud-pg
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud-fpm
          podSelector:
            matchLabels:
              cnpg.io/cluster: nextcloud
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-nextcloud-cluster
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: nextcloud
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud-fpm
          podSelector:
            matchLabels:
              cnpg.io/cluster: nextcloud
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud-fpm
          podSelector:
            matchLabels:
              cnpg.io/cluster: nextcloud
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-nextcloud-webhook
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: nextcloud
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 9443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-nextcloud-api-server
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: nextcloud
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-kube-apiserver
          podSelector:
            matchLabels:
              app: openshift-kube-apiserver
      ports:
        - protocol: TCP
          port: 6443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-nextcloud-dns
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: nextcloud
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - protocol: UDP
          port: 5353
        - protocol: TCP
          port: 5353
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-nextcloud-monitoring
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: nextcloud
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
      ports:
        - protocol: TCP
          port: 9187
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-nextcloud-pgdump-ingress
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: nextcloud
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app: pgdump-cron
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-nextcloud-cnpg-operator
  namespace: nextcloud-fpm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: nextcloud-fpm
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: nextcloud
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 8000
